# Queue-App

./: CMakeLists.txt  Patient.cpp  Patient.h  Queue.h  VIP_Patient.cpp  VIP_Patient.h  main.cpp
ClientServerApp/: CServer.h
ServerFail/: SClients.h  SServer.cpp  SServer.h  TServer.h  includes.h
